src/test/ui/parser/macro/macro-doc-comments-1.stderr
error: no rules expected the token `!`
  --> $DIR/macro-doc-comments-1.rs:16:5
   |
LL |     //! Inner
   |     ^^^^^^^^^

error: aborting due to previous error

